--- a/translations/cs-CZ.json
+++ b/translations/cs-CZ.json
@@ -17,7 +17,8 @@
         "Redlining": "Připomínkování",
         "Share": "Nasdílet Odkaz",
         "ThemeSwitcher": "Téma",
-        "Tools": "Nástroje Mapy"
+        "Tools": "Nástroje Mapy",
+        "Bookmark": ""
       },
       "menulabel": "Mapa & Nástroje"
     },
@@ -34,6 +35,15 @@
     },
     "bgswitcher": {
       "nobg": "Bez podkladu"
+    },
+    "bookmark": {
+      "add": "",
+      "description": "",
+      "manage": "",
+      "openintab": "",
+      "remove": "",
+      "title": "",
+      "update": ""
     },
     "bottombar": {
       "mousepos_label": "Souřadnice",
