--- a/translations/de-CH.json
+++ b/translations/de-CH.json
@@ -17,7 +17,8 @@
         "Redlining": "Zeichnen",
         "Share": "Teilen",
         "ThemeSwitcher": "Themen",
-        "Tools": "Werkzeuge"
+        "Tools": "Werkzeuge",
+        "Bookmark": ""
       },
       "menulabel": "Karte & Werkzeuge"
     },
@@ -34,6 +35,15 @@
     },
     "bgswitcher": {
       "nobg": "Kein Hintergrund"
+    },
+    "bookmark": {
+      "add": "",
+      "description": "",
+      "manage": "",
+      "openintab": "",
+      "remove": "",
+      "title": "",
+      "update": ""
     },
     "bottombar": {
       "mousepos_label": "Koordinaten",
