--- a/translations/es-ES.json
+++ b/translations/es-ES.json
@@ -17,7 +17,8 @@
         "Redlining": "Línea de demarcación",
         "Share": "Compartir enlace",
         "ThemeSwitcher": "Tema",
-        "Tools": "Herramientas de Mapa"
+        "Tools": "Herramientas de Mapa",
+        "Bookmark": ""
       },
       "menulabel": "Mapa & Herramientas"
     },
@@ -34,6 +35,15 @@
     },
     "bgswitcher": {
       "nobg": "Sin fondo"
+    },
+    "bookmark": {
+      "add": "",
+      "description": "",
+      "manage": "",
+      "openintab": "",
+      "remove": "",
+      "title": "",
+      "update": ""
     },
     "bottombar": {
       "mousepos_label": "Coordenadas",
