--- a/translations/fr-FR.json
+++ b/translations/fr-FR.json
@@ -17,7 +17,8 @@
         "Redlining": "Dessiner",
         "Share": "Partager",
         "ThemeSwitcher": "Thèmes",
-        "Tools": "Outils"
+        "Tools": "Outils",
+        "Bookmark": "Marque-pages"
       },
       "menulabel": "Cartes et outils"
     },
@@ -34,6 +35,15 @@
     },
     "bgswitcher": {
       "nobg": "Pas de fond"
+    },
+    "bookmark": {
+      "add": "Ajouter un marque-page",
+      "description": "Description",
+      "manage": "Gérer les marque-pages",
+      "openintab": "Ouvrir dans un nouvel onglet",
+      "remove": "Supprimer le marque-page",
+      "title": "Marque-pages",
+      "update": "Sauvegarder le marque-page"
     },
     "bottombar": {
       "mousepos_label": "Coordonnées",
