--- a/translations/pl-PL.json
+++ b/translations/pl-PL.json
@@ -17,7 +17,8 @@
         "Redlining": "Redlining",
         "Share": "Udostępnij Link",
         "ThemeSwitcher": "Motyw",
-        "Tools": "Narzędzia Mapy"
+        "Tools": "Narzędzia Mapy",
+        "Bookmark": ""
       },
       "menulabel": "Zawartość mapy i narzędzia"
     },
@@ -34,6 +35,15 @@
     },
     "bgswitcher": {
       "nobg": "Bez tła"
+    },
+    "bookmark": {
+      "add": "",
+      "description": "",
+      "manage": "",
+      "openintab": "",
+      "remove": "",
+      "title": "",
+      "update": ""
     },
     "bottombar": {
       "mousepos_label": "Współrzędne",
