--- a/translations/sv-SE.json
+++ b/translations/sv-SE.json
@@ -17,7 +17,8 @@
         "Redlining": "Rita",
         "Share": "Dela länk",
         "ThemeSwitcher": "Tema",
-        "Tools": "Kartverktyg"
+        "Tools": "Kartverktyg",
+        "Bookmark": ""
       },
       "menulabel": "Karta & Verktyg"
     },
@@ -34,6 +35,15 @@
     },
     "bgswitcher": {
       "nobg": "Ingen bakgrund"
+    },
+    "bookmark": {
+      "add": "",
+      "description": "",
+      "manage": "",
+      "openintab": "",
+      "remove": "",
+      "title": "",
+      "update": ""
     },
     "bottombar": {
       "mousepos_label": "Koordinater",
