--- a/translations/tr-TR.json
+++ b/translations/tr-TR.json
@@ -17,7 +17,8 @@
         "Redlining": "Çizim",
         "Share": "Bağlantı Paylaş",
         "ThemeSwitcher": "Tema",
-        "Tools": "Harita Araçları"
+        "Tools": "Harita Araçları",
+        "Bookmark": ""
       },
       "menulabel": "Harita & Araçlar"
     },
@@ -34,6 +35,15 @@
     },
     "bgswitcher": {
       "nobg": "Arkaplan Yok"
+    },
+    "bookmark": {
+      "add": "",
+      "description": "",
+      "manage": "",
+      "openintab": "",
+      "remove": "",
+      "title": "",
+      "update": ""
     },
     "bottombar": {
       "mousepos_label": "Koordinatlar",
